# Bot-System

./: .dockerignore  .env_example  .gitignore  Dockerfile.monitor  Dockerfile.shift_booking  README.md  docker-compose.yml  fly.toml  monitor.py  pyproject.toml  setup.sh  shared_utils.py  shift_booking.py
